Trade_coin: orderBook - add orderlist row content - Update html, css and add demo20

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -215,27 +215,118 @@
                     <div class="orderbook-tbheader">
                         <div class="content">
                             <div class="item" style="flex: 1 1 0%; justify-content: flex-start;">Price(USDT)</div>
-                            <div class="item" style="flex: 1 1 0%; justify-content: flex-end; text-align: right;">Amount(BTC)</div>
-                            <div class="item" style="flex: 1 1 0%; justify-content: flex-end; text-align: right;">Total</div>
+                            <div class="item" style="flex: 1 1 0%; justify-content: flex-end; text-align: right;">
+                                Amount(BTC)</div>
+                            <div class="item" style="flex: 1 1 0%; justify-content: flex-end; text-align: right;">Total
+                            </div>
                         </div>
                     </div>
                     <div class="orderlist-container">
-                        <div class="orderbook-list-container" style="position: relative; height: 359px; width: 320px; overflow: auto; will-change: transform; direction: ltr;">
-                            <div style="height: 340px; width: 100%;">
-                                <div class="orderbook-row-container">
-                                    <div class="row-container">
-                                        <div class="row-content">
-                                            <div class="ask-light" style="font-size: 12px; flex: 1 1 0%; text-align: left; color: rgb(246, 70, 93);">27640.92</div>
-                                            <div class="text" style="text-align: right;">0.01510</div>
-                                            <div class="text" style="text-align: right;">417.37789</div>
+                        <div style="overflow: visible; height: 0px; width: 0px;">
+                            <div class="orderbook-list-container"
+                                style="position: relative; height: 359px; width: 320px; overflow: auto; will-change: transform; direction: ltr;">
+                                <div style="height: 340px; width: 100%;">
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 0px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27415.04
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00069</div>
+                                                <div class="text" style="text-align: right;">18.91638</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-0.0630494%); left: 100%;"></div>
                                         </div>
                                     </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 20px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27415.03
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00664</div>
+                                                <div class="text" style="text-align: right;">182.03580</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-0.606736%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 40px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27415.02
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00130</div>
+                                                <div class="text" style="text-align: right;">35.63953</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-0.118789%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 60px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.80
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.10000</div>
+                                                <div class="text" style="text-align: right;">2,741.48000</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-9.13759%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 80px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.73
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00064</div>
+                                                <div class="text" style="text-align: right;">17.54543</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-0.0584806%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 100px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.55
+                                                </div>
+                                                <div class="text" style="text-align: right;">1.02032</div>
+                                                <div class="text" style="text-align: right;">27,971.61366</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-93.2327%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 120px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.54
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.34692</div>
+                                                <div class="text" style="text-align: right;">9,510.65222</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-31.7001%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    
                                 </div>
                             </div>
-                        </div>
-                        <div class="resize-triggers">
-
-                        </div>
                     </div>
                 </div>
                 <div class="chart"></div>
