Trade_coin: orderBook - Finished rows in orderlist content - Update html, css and add demo21

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -324,7 +324,146 @@
                                                 style="transform: translateX(-31.7001%); left: 100%;"></div>
                                         </div>
                                     </div>
-                                    
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 140px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.53
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.59555</div>
+                                                <div class="text" style="text-align: right;">16,326.72334</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-54.4189%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 160px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.49
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00138</div>
+                                                <div class="text" style="text-align: right;">37.83200</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-0.126099%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 180px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.43
+                                                </div>
+                                                <div class="text" style="text-align: right;">1.35099</div>
+                                                <div class="text" style="text-align: right;">37,036.62079</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-100%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 200px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.41
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.81467</div>
+                                                <div class="text" style="text-align: right;">22,333.69739</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-74.4412%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 220px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.38
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00064</div>
+                                                <div class="text" style="text-align: right;">17.54520</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-0.0584806%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 240px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.34
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00044</div>
+                                                <div class="text" style="text-align: right;">12.06231</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-0.0402054%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 260px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.28
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.55684</div>
+                                                <div class="text" style="text-align: right;">15,265.36768</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-50.8818%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 280px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.27
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.54715</div>
+                                                <div class="text" style="text-align: right;">14,999.71783</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-49.9963%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 300px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.18
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.91390</div>
+                                                <div class="text" style="text-align: right;">25,053.81910</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-83.5085%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 320px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="ask-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27414.15
+                                                </div>
+                                                <div class="text" style="text-align: right;">1.50302</div>
+                                                <div class="text" style="text-align: right;">41,204.01573</div>
+                                            </div>
+                                            <div class="progress-bar ask-bar"
+                                                style="transform: translateX(-100%); left: 100%;"></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                     </div>
