--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -466,8 +466,19 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="orderbook-ticket">
+                        <div class="contract-price status-green">27,326.53<svg xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 24 24" fill="none" class="arrow-icon status-buy css-3kwgah"
+                                style="transform: rotate(180deg);">
+                                <path d="M5 13.47l1.41-1.41 5.1 5.1V3h1.99v14.15l5.09-5.09L20 13.47l-7.5 7.5-7.5-7.5z"
+                                    fill="currentColor"></path>
+                            </svg></div>
+                        
                     </div>
                 </div>
+
                 <div class="chart"></div>
                 <div class="orderform"></div>
 
