Trade_coin: orderBook - mark price and more button- Update html, css and add demo23

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -475,7 +475,8 @@
                                 <path d="M5 13.47l1.41-1.41 5.1 5.1V3h1.99v14.15l5.09-5.09L20 13.47l-7.5 7.5-7.5-7.5z"
                                     fill="currentColor"></path>
                             </svg></div>
-                        
+                        <div class="mark-price">$27,326.53</div>
+                        <div><a class="more" target="" href="/en/orderbook/BTC_USDT">More</a></div>
                     </div>
                 </div>
 
