Trade_coin: orderBook - row content2 in orderlist - Update html, css and add demo24

--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -478,6 +478,129 @@
                         <div class="mark-price">$27,326.53</div>
                         <div><a class="more" target="" href="/en/orderbook/BTC_USDT">More</a></div>
                     </div>
+                    <div class="orderlist-container">
+                        <div style="overflow: visible; height: 0px; width: 0px;">
+                            <div class="orderbook-list-container"
+                                style="position: relative; height: 359px; width: 320px; overflow: auto; will-change: transform; direction: ltr;">
+                                <div style="height: 340px; width: 100%;">
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 0px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27327.41
+                                                </div>
+                                                <div class="text" style="text-align: right;">4.14250</div>
+                                                <div class="text" style="text-align: right;">113,203.79592</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-100%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 20px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27327.38
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.54891</div>
+                                                <div class="text" style="text-align: right;">15,000.27216</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-62.5068%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 40px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27326.06
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.01541</div>
+                                                <div class="text" style="text-align: right;">421.09458</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-1.75481%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 60px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27326.04
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.06751</div>
+                                                <div class="text" style="text-align: right;">1,844.78096</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-7.68767%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 80px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27326.03
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00162</div>
+                                                <div class="text" style="text-align: right;">44.26817</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-0.184477%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 100px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27325.96
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00675</div>
+                                                <div class="text" style="text-align: right;">184.45023</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-0.768653%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 120px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27325.83
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00064</div>
+                                                <div class="text" style="text-align: right;">17.48853</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-0.0728797%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    <div class="orderbook-progress "
+                                        style="position: absolute; left: 0px; top: 140px; height: 20px; width: 100%; box-sizing: border-box;">
+                                        <div class="progress-container" style="flex-direction: row;">
+                                            <div class="row-content">
+                                                <div class="bid-light"
+                                                    style="font-size: 12px; flex: 1 1 0%; text-align: left;">27325.44
+                                                </div>
+                                                <div class="text" style="text-align: right;">0.00044</div>
+                                                <div class="text" style="text-align: right;">12.02319</div>
+                                            </div>
+                                            <div class="progress-bar bid-bar"
+                                                style="transform: translateX(-0.0501048%); left: 100%;"></div>
+                                        </div>
+                                    </div>
+                                    
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
                 </div>
 
                 <div class="chart"></div>
