--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -89,14 +89,14 @@ html {
     display: grid;
     gap: 1px;
     grid-template:
-        "header header header header header" minmax(64px, auto)
-        "left subHeader subHeader market right" 68px
-        "left orderbook chart market right" 320px
-        "left orderbook chart trades right" 160px
-        "left orderbook orderform trades right" 1.15fr
-        "left orderbook orderform marketActivity right" auto
-        "left basictable basictable basictable right" 285px
-        "footer footer footer footer footer" 24px / 1fr minmax(253px, 320px) minmax(510px, 880px) minmax(253px, 320px) 1fr;
+    "header header header header header" minmax(64px, auto)
+    "left subHeader subHeader market right" 68px
+    "left orderbook chart market right" 320px
+    "left orderbook chart trades right" 160px
+    "left orderbook orderform trades right" 200px
+    "left orderbook orderform marketActivity right" 150px
+    "left basictable basictable basictable right" 285px
+    "footer footer footer footer footer" 24px / 1fr minmax(253px, 320px) minmax(510px, 880px) minmax(253px, 320px) 1fr;
 }
 .header{
     grid-area: header;
@@ -122,7 +122,6 @@ html {
     width: 100%;
     height: 100%;
     background-color: rgb(22, 26, 30);
-    grid-area: orderbook / orderbook / orderbook / orderbook;
     position: relative;
     padding-top: 16px;
     padding-bottom: 4px;
@@ -773,4 +772,7 @@ i {
     color: rgb(132, 142, 156);
     font-size: 12px;
     text-decoration: none;
+}
+.bid-light{
+    color: rgb(14, 203, 129);
 }
